added video clip for loop

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<i class="fa fa-play-circle" id="play"></i>
 			</div>
 
-			<video id="video" preload="auto" data-setup="{}" webkit-playsinline="" autoplay="" src="assets/door_small.mp4" style="width: 100%;" loop="">
+			<video id="video" preload="auto" data-setup="{}" webkit-playsinline="" autoplay="" src="assets/banner-video.mp4" style="width: 100%;" loop="loop">
 			</video>
 
 
