--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	<div class="wrapper">
 
 		<header>
-			<div id="about">About</div>
-
+<!-- 			<div id="about"></div>
+ -->
 			<div id="title">
 				<div class="loving">Loving</div>
 				<div class="smallcaps">Long-Distance</div>
@@ -38,8 +38,10 @@
 			<video id="video" preload="auto" data-setup="{}" webkit-playsinline="" autoplay="" src="assets/banner-video.mp4" style="width: 100%;" loop="loop">
 			</video>
 
-
-			<iframe id="fullvid" src="http://player.vimeo.com/video/105646584?title=0&amp;byline=0&amp;portrait=0" width="100%" height="700" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<div class="full-vid-wrapper">
+				<i class="fa fa-times" id="exit-vid"></i>
+				<iframe id="fullvid" width="100%" height="700" autoplay="1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			</div>
 
 
 
