made mobile view less crappy

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width">
 
 	<!-- fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Karla:700,400italic,400' rel='stylesheet' type='text/css'>
@@ -46,7 +49,7 @@
 				<i class="fa fa-times" id="exit-vid"></i>
 				<iframe id="fullvid" class="vimeo-iframe" width="100%"  autoplay="1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
-
+			
 		</header>
 
 
@@ -55,6 +58,9 @@
 		<div class="panel" id="description">
 			<div class="textbox">
 				<h1>About</h1>
+				
+				<iframe class="vimeo-iframe2" id="video-mobile" src="//player.vimeo.com/video/107348115?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" width="100%"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				
 				<p>In the absence of physical closeness, how do you build a narrative and sustain the love that you have with someone else through just words or other snippets of communication?</p>
 				<p>Loving Long-Distance is a project that explores these communications through a video series and an app.</p>
 				<p>The videos tell the stories of two individuals and their attempts to bridge physical distances with written accounts.</p> 
