added social text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width">
 
+    <!-- social media stuff -->
+
+        <meta property="og:site_name"       content="Loving Long Distance"/>
+        <meta property="fb:app_id"          content="463657303777453" /> 
+        <meta property="og:type"            content="website" /> 
+        <meta property="og:url"             content="http://lovinglongdistance.com" /> 
+        <meta property="og:title"           content="Loving Long Distance" /> 
+        <meta property="og:image"           content="http://lovinglongdistance.com/assets/socialmedia_promo.png" /> 
+        <meta property="og:description"     content="Loving Long-Distance is a project that explores the stories we tell each other when we're apart through a video series and an app." />
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@lovingLD">
+        <meta name="twitter:title" content="Loving Long-Distance">
+        <meta name="twitter:description" content="An exploration of the stories we tell each other when we're apart.">
+        <meta name="twitter:creator" content="">
+        <meta name="twitter:image:src" content="hhttp://lovinglongdistance.com/assets/socialmedia_promo.png">
+        <meta name="twitter:domain" content="http://lovinglongdistance.com">
+        <meta name="twitter:app:name:iphone" content="">
+        <meta name="twitter:app:name:ipad" content="">
+        <meta name="twitter:app:name:googleplay" content="">
+        <meta name="twitter:app:url:iphone" content="">
+        <meta name="twitter:app:url:ipad" content="">
+        <meta name="twitter:app:url:googleplay" content="">
+        <meta name="twitter:app:id:iphone" content="">
+        <meta name="twitter:app:id:ipad" content="">
+        <meta name="twitter:app:id:googleplay" content="">
+
 	<!-- fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Karla:700,400italic,400' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,700italic' rel='stylesheet' type='text/css'>
@@ -36,8 +63,8 @@
 					<i class="fa fa-play-circle" id="play"></i>
 					<div class="" id="subheader">
 						<p>An exploration of the</p>
-						<p>non-physical interactions</p>
-						<p>that make up our love lives.</p>
+						<p>the stories we tell each other</p>
+						<p>when we're apart.</p>
 					</div>
 				</div>
 			</div>
