--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
 				
 				<p>In the absence of physical closeness, how do you build a narrative and sustain the love that you have with someone else through just words or other snippets of communication?</p>
 				<p>Loving Long-Distance is a project that explores these communications through a video series and an app.</p>
-				<p>The videos tell the stories of two individuals and their attempts to bridge physical distances with written accounts.</p> 
 			</div>
 		</div>
 
@@ -246,6 +245,22 @@
 		</div>
 
 	</div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '463657303777453',
+      xfbml      : true,
+      version    : 'v2.1'
+    });
+  };
 
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 </body>
 </html>
