--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
 		</div>
 
 	</div>
+
+<!-- Facebook social -->
 <script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -261,6 +263,19 @@
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
+</script>
+
+<!-- Google Analytics -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55381912-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 </body>
 </html>
