--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 				
 				<p>In the absence of physical closeness, how do you build a narrative and sustain the love that you have with someone else through just words or other snippets of communication?</p>
 				<p>Loving Long-Distance is a project that explores these communications through a video series and an app.</p>
+				<a href="https://twitter.com/lovingLD" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @lovingLD</a>
+
 			</div>
 		</div>
 
@@ -244,6 +246,28 @@
 			</div>
 		</div>
 
+		<div class="panel" id="video-panel">
+			<div class="textbox">
+				<h1>The Team</h1>
+				
+				<h2>Lam Thuy Vo</h2>
+				<h3>Filmmaker/ Designer / Developer</h3>
+				<p>Lam Thuy Vo is a multi-platform storyteller and interdisciplinary journalist who leads a team of coder-reporters and covers poverty-related issues at Al Jazeera America. Previously, she has explained economic issues using graphics and multimedia for NPR’s Planet Money and led video operations for the Wall Street Journal in Asia.</p>
+
+				<h2>Susan McGregor</h2> 
+				<h3>Developer</h3>
+				<p>Susan E. McGregor was the Senior Programmer on the News Graphics team at the Wall Street Journal Online before leaving to join the Tow Center for Digital Journalism at Columbia Journalism School in 2011. </p>
+
+				<h2>Ana Giraldo-Wingler</h2>
+				<h3>Designer/Developer</h3>
+				<p>Ana works as a full-time front-end developer at Siberia. Previously, she’s produced documentaries with Al Jazeera’s Faultlines and Vice.</p> 
+
+
+
+			</div>
+		</div>
+
+
 	</div>
 
 <!-- Facebook social -->
@@ -277,5 +301,8 @@
   ga('send', 'pageview');
 
 </script>
+
+<!-- Twitter follow button -->
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </body>
 </html>
