added twitter handles

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				<div class="error-message" id="1814619563_errorMessage"></div>
 				</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 				<div dir="ltr" class="ss-item  ss-paragraph-text"><div class="ss-form-entry">
-				<label class="ss-q-item-label" for="entry_141792637"><div class="ss-q-title">If you could invent a tool to help you revisit the communications you had with someone far away, what would show you?
+				<label class="ss-q-item-label" for="entry_141792637"><div class="ss-q-title">If you could invent a tool to help you revisit the communications you had with someone far away, what would it show you?
 				</div>
 				<div class="ss-q-help ss-secondary-text" dir="ltr">Imagine it like a digital scrapbook of your relationship with someone. What would you like to see in it?</div></label>
 				<textarea name="entry.141792637" rows="8" cols="0" class="ss-q-long" id="entry_141792637" dir="auto" aria-label="If you could invent a tool to help you revisit the communications you had with someone far away, what would show you? Imagine it like a digital scrapbook of your relationship with someone. What would you like to see in it? Must be fewer than 500 characters."></textarea>
@@ -252,14 +252,17 @@
 				
 				<h2>Lam Thuy Vo</h2>
 				<h3>Filmmaker/ Designer / Developer</h3>
+				<h3><a href="http://twitter.com/lamthuyvo" target="_blank">@lamthuyvo</a></h3>
 				<p>Lam Thuy Vo is a multi-platform storyteller and interdisciplinary journalist who leads a team of coder-reporters and covers poverty-related issues at Al Jazeera America. Previously, she has explained economic issues using graphics and multimedia for NPR’s Planet Money and led video operations for the Wall Street Journal in Asia.</p>
 
 				<h2>Susan McGregor</h2> 
 				<h3>Developer</h3>
+				<h3><a href="http://twitter.com/SusanEMcG" target="_blank">@SusanEMcG</a></h3>
 				<p>Susan E. McGregor was the Senior Programmer on the News Graphics team at the Wall Street Journal Online before leaving to join the Tow Center for Digital Journalism at Columbia Journalism School in 2011. </p>
 
 				<h2>Ana Giraldo-Wingler</h2>
 				<h3>Designer/Developer</h3>
+				<h3><a href="http://twitter.com/awanderingorill" target="_blank">@awanderingorill</a></h3>
 				<p>Ana works as a full-time front-end developer at Siberia. Previously, she’s produced documentaries with Al Jazeera’s Faultlines and Vice.</p> 
 
 
