--- a/index.html
+++ b/index.html
@@ -112,15 +112,17 @@
 
 		<div class="panel" id="app-panel">
 			<div class="textbox">
-				<h1>The App</h1>
-				<p>We will create an app that helps you revisit the stories and memories you shared with a loved one via emails, chat messages, photos and Facebook likes through an interactive timeline.</p>
-				<p>If you would like to give us feedback in how to make an app that suits your needs, please feel free to fill in the form below. You can also only fill out your contact information and submit the form if you'd like to stay in touch about our project.</p>
+				<h1>Your stories &mdash; The App and a Story Collection</h1>
+				<p>We will create an app that helps you revisit the stories and memories you shared with a loved one via emails, chat messages, photos and Facebook likes through an interactive timeline. </p>
+
+				<p>We would also like to share stories of how people survived being in long-distance relationships &mdash; romantic as well as platonic ones.</p>
+
+				<p>If you would like to give us feedback in how to make an app that suits your needs or if you want to share your survival strategies, please fill out and submit the form below. You can also just fill in your contact information and leave the rest blank if you'd just like to stay in touch about our project.</p>
+
 				<p>Feel free to get in touch! wearelovinglongdistance [at] gmail [dot] com</p>
 			</div>
 
 			<div id="google-form">
-				
-				
 				<div id="lld-submit-page"><p>Thank you for submitting</p></div>
 				<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
 
@@ -246,6 +248,7 @@
 			</div>
 		</div>
 
+
 		<div class="panel" id="video-panel">
 			<div class="textbox">
 				<h1>The Team</h1>
@@ -264,8 +267,6 @@
 				<h3>Designer/Developer</h3>
 				<h3><a href="http://twitter.com/awanderingorill" target="_blank">@awanderingorill</a></h3>
 				<p>Ana works as a full-time front-end developer at Siberia. Previously, she’s produced documentaries with Al Jazeera’s Faultlines and Vice.</p> 
-
-
 
 			</div>
 		</div>
